# charon

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  charon.desktop
.github/workflows/: ci.yml
docs/: config.md
geocoder_nlp_rs/: Cargo.toml  README.md  build.rs
geocoder_nlp_rs/src/: ffi.rs  lib.rs
migrations/: 20251220175508_tile.down.sql  20251220175508_tile.up.sql  20251224064900_tile_index.down.sql  20251224064900_tile_index.up.sql  20260103161900_valhalla_packages.down.sql  20260103161900_valhalla_packages.up.sql  20260206000000_offline_tiles.down.sql  20260206000000_offline_tiles.up.sql  20260208000000_cache_cleanup_indices.down.sql  20260208000000_cache_cleanup_indices.up.sql
rules/: 66-charon.rules.polkit
src/: config.rs  db.rs  downloader.rs  entity_type.rs  geometry.rs  main.rs  region.rs  tiles.rs
src/dbus/: iio_sensor_proxy.rs  mod.rs  modem_manager.rs
src/geocoder/: geojson.rs  mod.rs  nlp.rs  nominatim.rs  photon.rs
src/router/: mod.rs  valhalla_api.rs
src/router/valhalla/: config.json  mod.rs  offline.rs  online.rs
src/tiles/: mod.rs
src/tiles/vector/: mod.rs  protobuf.rs
src/ui/: mod.rs  renderer.rs  skia.rs  text_field.rs  window.rs
src/ui/view/: download.rs  map.rs  mod.rs  route.rs  search.rs
src/wayland/: mod.rs
