[package]
name = "charon"
version = "0.1.0"
description = "Wayland Mobile Maps & Navigation"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/charon"
license = "GPL-3.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
calloop = "0.14.3"
calloop-wayland-source = "0.4.1"
configory = { version = "0.6.2", features = ["docgen", "log"] }
glutin = { version = "0.32.3", default-features = false, features = ["egl", "wayland"] }
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
skia-safe = { version = "0.90.0", features = ["all-linux", "textlayout"] }
smithay-client-toolkit = { version = "0.20.0", default-features = false, features = ["xkbcommon"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wayland-backend = { version = "0.3.11", features = ["client_system"] }

[build-dependencies]
gl_generator = "0.14.0"
