[package]
name = "geocoder_nlp"
version = "0.2.1"
description = "Rust bindings for geocoder-nlp"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/charon"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version.workspace = true
edition.workspace = true
include = [
    "geocoder-nlp/thirdparty/sqlite3pp/headeronly_src",
    "geocoder-nlp/src",
    "libpostal/src",
    "**/LICENSE",
    "**/*.rs",
]

[dependencies]
cxx.workspace = true
thiserror.workspace = true

[build-dependencies]
cc.workspace = true
cxx-build.workspace = true
pkg-config.workspace = true
